# parallel_cpp_example

./: .clang-format  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  build.sh  build_and_run.sh  entrypoint.sh  install_eigen.sh  run_cpu.sh  run_gpu.sh
.devcontainer/: devcontainer.json
script/: photometric_error.numpy.py  photometric_error.py  photometric_error.torch.py
src/: compute_photometric_error.cpp  compute_photometric_error.h  main.cpp  photometric_error.cpp
